--- a/src/components/TransactionTable/style.css
+++ b/src/components/TransactionTable/style.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.2rem;
     width: 100%;
     box-shadow:var(--shadow);
     border-radius: 0.5rem;
-    padding: 0rem 0.5rem;
+    padding: 0rem 0.3rem;
 }
   
 .input-flex input {
@@ -19,7 +19,7 @@
     outline: none;
 }
 .select-input {
-    width: 10%;
+    width: auto;
     margin-right:30;
     display: flex;
     align-items: center;
@@ -31,4 +31,32 @@
 
 .select-input > div {
     border: 0px solid #fff !important;
+}
+.input-radio{
+    display:none;
+}
+@media (min-width:700px){
+    .input-radio{
+        display: block;
+        align-content: center;
+    }
+    .select-input {
+        width: 10%;
+        margin-right:30;
+        display: flex;
+        align-items: center;
+        box-shadow: var(--shadow);
+        border-radius: 0.5rem !important;
+        padding: 0.2rem 0.5rem;
+    }
+    .input-flex {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 0.5rem;
+        width: 100%;
+        box-shadow:var(--shadow);
+        border-radius: 0.5rem;
+        padding: 0rem 0.5rem;
+    }
 }
